[package]
name = "telaxion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.23.0"
spirv-std = "0.6.1"
bytemuck = { version = "1.6.3", features = ["derive"] }
rayon = { version = "1.6.1" }
minifb = "0.24.0"
winit = "0.28.3"
rand = "0.8.4"
